--- a/style/style.css
+++ b/style/style.css
@@ -942,21 +942,21 @@ button:active{
     }
 
     .navList{
-        width: 80%;
+        width: 94%;
         border-radius: 34px;
-        font-size: 12px;
+        font-size: 13px;
         color: white;
         padding: 12px 14px;
         position: fixed;
         background-color: #2E2E30;
         z-index: 100;
         /* top: 20px; */
-        /* left: -143px; */
+        left: 10px;
         bottom: 7px;
         /* flex-direction: column; */
         /* align-items: flex-start; */
         /* height: 200px; */
-        /* transition: all 0.3s;*/
+        /* transition: all 0.3s;
     }
 
     .navList>p:nth-child(1){
