--- a/style/style.css
+++ b/style/style.css
@@ -956,7 +956,7 @@ button:active{
         /* flex-direction: column; */
         /* align-items: flex-start; */
         /* height: 200px; */
-        /* transition: all 0.3s;
+        /* transition: all 0.3s;*/
     }
 
     .navList>p:nth-child(1){
